# googletest-tutorial

./: .gitignore  CMakeLists.txt  README.md
src/: mail.c  mail.h  network.c  network.h
test/: gmock_example_c_version.cc  gtest_example.cc
test/mock/: mockNetwork.cc  mockNetworkInterface.h
